[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Enemies/FLA-B.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/FLA-B/FLA-B.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/FLA-B/FLA-B_atacks.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/FLA-B/FLA-B_Special.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/EnemyHealthUnder.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/EnemyHealth.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Shadow.png" type="Texture" id=7]


[sub_resource type="Animation" id=1]

resource_name = "Dead"
length = 7.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 30, 31, 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=2]

resource_name = "Down"
length = 8.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=3]

resource_name = "Idle"
length = 2.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]

resource_name = "Left"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=5]

resource_name = "PunchDown"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 0, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_arrow"
} ]
}

[sub_resource type="Animation" id=6]

resource_name = "PunchLeft"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_arrow"
} ]
}

[sub_resource type="Animation" id=7]

resource_name = "PunchRight"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_arrow"
} ]
}

[sub_resource type="Animation" id=8]

resource_name = "PunchUp"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_arrow"
} ]
}

[sub_resource type="Animation" id=9]

length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=10]

resource_name = "SpecialDown"
length = 9.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_arrows"
} ]
}

[sub_resource type="Animation" id=11]

resource_name = "SpecialLeft"
length = 8.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_arrows"
} ]
}

[sub_resource type="Animation" id=12]

resource_name = "SpecialRight"
length = 8.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_arrows"
} ]
}

[sub_resource type="Animation" id=13]

resource_name = "SpecialUp"
length = 9.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_arrows"
} ]
}

[sub_resource type="Animation" id=14]

length = 7.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="RectangleShape2D" id=15]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CircleShape2D" id=16]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="RectangleShape2D" id=17]

custom_solver_bias = 0.0
extents = Vector2( 10, 17.8173 )

[sub_resource type="CircleShape2D" id=18]

custom_solver_bias = 0.0
radius = 10.0

[node name="FLA-B" type="KinematicBody2D" index="0" groups=[
"enemies",
]]

scale = Vector2( 0.75, 0.75 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Sprites" type="Node2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( 0, -82.6665 )

[node name="1" type="Sprite" parent="Sprites" index="0"]

texture = ExtResource( 2 )
vframes = 6
hframes = 6
frame = 1
_sections_unfolded = [ "Animation" ]

[node name="2" type="Sprite" parent="Sprites" index="1"]

visible = false
texture = ExtResource( 3 )
vframes = 4
hframes = 6
_sections_unfolded = [ "Animation" ]

[node name="3" type="Sprite" parent="Sprites" index="2"]

visible = false
texture = ExtResource( 4 )
vframes = 4
hframes = 9
frame = 5
_sections_unfolded = [ "Animation", "Region" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = "Idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 8.0
anims/Dead = SubResource( 1 )
anims/Down = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Left = SubResource( 4 )
anims/PunchDown = SubResource( 5 )
anims/PunchLeft = SubResource( 6 )
anims/PunchRight = SubResource( 7 )
anims/PunchUp = SubResource( 8 )
anims/Right = SubResource( 9 )
anims/SpecialDown = SubResource( 10 )
anims/SpecialLeft = SubResource( 11 )
anims/SpecialRight = SubResource( 12 )
anims/SpecialUp = SubResource( 13 )
anims/Up = SubResource( 14 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Shape" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 2.61285, -13.1162 )
scale = Vector2( 2.62816, 1.82712 )
shape = SubResource( 15 )

[node name="HealthBar" type="TextureProgress" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -170.0
margin_right = 20.0
margin_bottom = -77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 5 )
texture_over = null
texture_progress = ExtResource( 6 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Anchor", "Margin", "Radial Fill", "Textures", "Visibility" ]

[node name="Radar" type="Area2D" parent="." index="4"]

editor/display_folded = true
visible = false
position = Vector2( 141.574, -53.4956 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape2D" parent="Radar" index="0"]

position = Vector2( -130.014, 46.7649 )
scale = Vector2( 35.614, 27.5974 )
shape = SubResource( 16 )

[node name="DamageCollider" type="Area2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( -135.09, -78.884 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape2D" parent="DamageCollider" index="0"]

position = Vector2( 135.628, 5.11784 )
scale = Vector2( 2.91342, 3.98469 )
shape = SubResource( 17 )

[node name="AttackCollider" type="Area2D" parent="." index="6"]

editor/display_folded = true
position = Vector2( 146.978, -51.3694 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape2D" parent="AttackCollider" index="0"]

position = Vector2( -145.796, -67.6039 )
shape = SubResource( 18 )
disabled = true

[node name="Sprite" type="Sprite" parent="." index="7"]

position = Vector2( 4.24136, -3.29517 )
scale = Vector2( 1.63487, 1.65012 )
z_index = -1
texture = ExtResource( 7 )
_sections_unfolded = [ "Z Index" ]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_started"]

[connection signal="body_entered" from="Radar" to="." method="_on_Radar_body_entered"]

[connection signal="area_entered" from="AttackCollider" to="." method="_on_attack_hit"]


